# Lumina

./: .gitignore  Cargo.toml  README.md  aaaaa.txt  build.rs  compile.bat  compile.sh  hfd.lumin  panic_log.txt  test.lumin  ´
.github/workflows/: rust.yml
Notes/journals/: 2023_12_16.md  2023_12_17.md
Report/Lumina-Report/: Untitled.md
Report/Lumina-Report/.obsidian/: workspace.json
crates/glsl_parser/: Cargo.toml
crates/glsl_parser/src/: lib.rs  main.rs  parser.rs
crates/lumina_atlas/: Cargo.toml
crates/lumina_atlas/src/: atlas.rs  lib.rs
crates/lumina_bundle/: Cargo.toml
crates/lumina_bundle/src/: lib.rs
crates/lumina_bundles/: Cargo.toml
crates/lumina_core/: Cargo.toml
crates/lumina_core/src/: device.rs  fps_manager.rs  framebuffer.rs  image.rs  lib.rs  swapchain.rs  texture.rs  window.rs
crates/lumina_data/: Cargo.toml
crates/lumina_data/src/: buffer.rs  descriptor.rs  descriptor_manager.rs  lib.rs  type_padding.rs
crates/lumina_debug/: Cargo.toml
crates/lumina_debug/src/: logger.rs
crates/lumina_ecs/: Cargo.toml
crates/lumina_ecs/src/: app.rs  component_manager.rs  global_manager.rs  lib.rs  query.rs  stage.rs
crates/lumina_files/: Cargo.toml
crates/lumina_files/src/: lib.rs  loader.rs  saver.rs
crates/lumina_geometry/: Cargo.toml
crates/lumina_geometry/src/: lib.rs  model.rs  shapes.rs
crates/lumina_graphic/: Cargo.toml
crates/lumina_graphic/src/: lib.rs  pipeline.rs  renderer.rs  shader.rs  texture.rs  types.rs
crates/lumina_input/: Cargo.toml
crates/lumina_input/src/: keyboard.rs  mouse.rs
crates/lumina_macro/: Cargo.toml
crates/lumina_macro/src/: lib.rs
crates/lumina_object/: Cargo.toml
crates/lumina_object/src/: component_manager.rs  entity.rs  game_object.rs  group.rs  lib.rs  transform.rs
crates/lumina_path/: Cargo.toml
crates/lumina_path/src/: lib.rs
crates/lumina_pbr/: Cargo.toml
crates/lumina_pbr/src/: lib.rs  light.rs  material.rs
crates/lumina_render/: Cargo.toml
crates/lumina_render/src/: camera.rs  canvas.rs  gui_canvas.rs  lib.rs  material.rs  mesh.rs  model.rs  quad.rs  renderer.rs  system_renderer.rs
crates/lumina_scene/: Cargo.toml
crates/lumina_scene/src/: lib.rs  query.rs
crates/revier_core/: Cargo.toml
crates/revier_core/src/: device.rs  fps_manager.rs  image.rs  lib.rs  swapchain.rs  window.rs
crates/revier_data/: Cargo.toml
crates/revier_data/src/: buffer.rs  descriptor.rs
crates/revier_debug/: Cargo.toml
crates/revier_debug/src/: logger.rs
crates/revier_geometry/: Cargo.toml
crates/revier_geometry/src/: model.rs  shapes.rs
crates/revier_graphic/: Cargo.toml
crates/revier_graphic/src/: lib.rs  physical_renderer.rs  pipeline.rs  renderer.rs  shader.rs  types.rs
crates/revier_input/: Cargo.toml
crates/revier_input/src/: keyboard.rs  lib.rs  mouse.rs
crates/revier_object/: Cargo.toml
crates/revier_object/src/: game_object.rs  transform.rs
crates/revier_render/: Cargo.toml
crates/revier_render/src/: camera.rs  mesh.rs
crates/revier_scene/: Cargo.toml
crates/revier_scene/src/: lib.rs  query.rs  scene.rs
docs/: install_rust_version.bat
models/: chest.gltf  demoman.fbx  demoman.gltf  men.gltf  peter-griffin.fbx  spy.fbx
shaders/: default.lsl  default.wgsl  default_shader.frag  default_shader.frag.spv  default_shader.vert  default_shader.vert.spv  light_cube_shader.vert  recorder_shader.frag  recorder_shader.frag.spv  recorder_shader.vert  recorder_shader.vert.spv  shadow_map_shader.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  skybox_shader.frag.spv  skybox_shader.vert.spv
shaders/canvas/: canvas_shader.frag  canvas_shader.frag.spv  canvas_shader.vert.spv
shaders/default/: default_shader.frag  default_shader.frag.spv  default_shader.vert
shaders/gui/: gui_shader.frag  gui_shader.frag.spv  gui_shader.vert  gui_shader.vert.spv
shaders/old_shader/: default_shader.frag  default_shader.frag.spv  default_shader.vert.spv  light_cube_shader.frag  light_cube_shader.frag.spv  light_cube_shader.vert.spv
shaders/shadow/: shadow_map_shader.frag  shadow_map_shader.vert.spv
shaders/skybox/: skybox_shader.frag  skybox_shader.vert
src/: Device.rs  Window.rs  buffer.rs  components.rs  data.rs  device.rs  engine.rs  game.rs  graphics.rs  main.rs  old_main.txt  old_pipeline.rs  pipeline.rs  state.rs  swapchain.rs  window.rs
src/components/: camera.rs  game_object.rs  model.rs  transform.rs
src/components/model/: cube.rs
src/components/shapes/: cube.rs
src/data/: buffer.rs  descriptor.rs
src/engine/: device.rs  entity.rs  game_object.rs  model.rs  scene.rs  swapchain.rs  window.rs
src/graphics/: mesh.rs  pipeline.rs  renderer.rs  shader.rs
src/testing/: fill.rs
