[package]
name = "Lumina"
version = "0.1.0"
edition = "2021"
authors = ["G..."]
description = "Rust Game Engine"
keywords = ["game", "engine", "rust", "ash"]
build = "build.rs"

readme = "README.md"
license = "MIT OR Apache-2.0"


[features]
default = ["lumina_core", "lumina_atlas", "lumina_files", "lumina_data", "lumina_render", "lumina_graphic", "lumina_geometry", "lumina_object", "lumina_input", "lumina_ecs", "lumina_pbr", "lumina_path", "glsl_parser"]
optional = []

[dependencies]
#Lumina
lumina_core = { path = "crates/lumina_core", version = "0.1.0", optional = true }
lumina_data = { path = "crates/lumina_data", version = "0.1.0", optional = true }
lumina_render = { path = "crates/lumina_render", version = "0.1.0", optional = true }
lumina_graphic = { path = "crates/lumina_graphic", version = "0.1.0", optional = true }
lumina_geometry = { path = "crates/lumina_geometry", version = "0.1.0", optional = true }
lumina_object = { path = "crates/lumina_object", version = "0.1.0", optional = true }
lumina_input = { path = "crates/lumina_input", version = "0.1.0", optional = true }
lumina_pbr = { path = "crates/lumina_pbr", version = "0.1.0", optional = true }
lumina_ecs = { path = "crates/lumina_ecs", version = "0.1.0", optional = true }
lumina_files = { path = "crates/lumina_files", version = "0.1.0", optional = true }
lumina_path = { path = "crates/lumina_path", version = "0.1.0", optional = true }
lumina_atlas = { path = "crates/lumina_atlas", version = "0.1.0", optional = true }
glsl_parser = { path = "crates/glsl_parser", version = "0.1.0", optional = true } 

#Other
ash = { version = "0.37.3", features = ["linked", "debug"] }
ash-window = "0.12.0"
cgmath = "0.18.0"
egui = "0.21"
num = "0.4.1"
raw-window-handle = "0.5.2"
simple_logger = "4.2.0"
softbuffer = "0.3.0"
sprintf = "0.1.3"
winit = "0.28.6"
lazy_static = "1.4.0"
gilrs = "0.10.2"
rand = "0.6.5"
shaderc = "0.8.2"
glam = "0.24.1"
criterion = "0.5.1"
image = "0.24.7"
egui_sdl2_platform = { git = "https://github.com/ComLarsic/egui_sdl2_platform" }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", revion = "31e830e"}
nfd = "0.0.4"

