[package]
name = "lumina_atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumina_core = { path = "../lumina_core", version = "0.1.0" }
lumina_path = { path = "../lumina_path", version = "0.1.0" }


image = "0.24.7"
num_cpus = "1.16.0"
