[package]
name = "lumina_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumina_path = { path = "../lumina_path", version = "0.1.0" }



#Other
ash = {version="0.37.3",features = ["linked", "debug"]}
ash-window = "0.12.0"
cgmath = "0.18.0"
num = "0.4.1"
glam = "0.24.1"
raw-window-handle = "0.5.2"
sprintf = "0.1.3"
winit = "0.28.7"
color-print = "0.3.4"
image = "0.24.7"
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", revion = "31e830e"}

