[package]
name = "lumina_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumina_core = {path="../lumina_core",version = "0.1.0"}
lumina_input = {path="../lumina_input",version = "0.1.0"}
lumina_graphic = {path="../lumina_graphic",version = "0.1.0"}
lumina_object = {path="../lumina_object",version = "0.1.0"}
lumina_render = {path="../lumina_render",version = "0.1.0"}

num_cpus = "1.16.0"


[dependencies.sdl2]
default-features = false
features = ["image"]
