[package]
name = "lumina_graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Lumina
lumina_core = {path="../lumina_core",version = "0.1.0"}
lumina_render = {path="../lumina_render",version = "0.1.0"}
lumina_geometry = {path="../lumina_geometry",version = "0.1.0"}
lumina_object = {path="../lumina_object",version = "0.1.0"}
lumina_scene = {path="../lumina_scene",version = "0.1.0"}
glsl_parser = { path = "../glsl_parser", version = "0.1.0"} 


#Other
ash = {version="0.37.3",features = ["linked", "debug"]}
glam = "0.24.1"
wgpu = "0.15"

