[package]
name = "lumina_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Lumina
lumina_core = {path="../lumina_core",version = "0.1.0"}

#Other
wgpu = "0.18"
bytemuck = {version = "1.13", features = [ "derive" ]}
glam = "0.24.1"
