[package]
name = "revier_graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Revier
revier_core = {path="../revier_core",version = "0.1.0"}
revier_data = {path="../revier_data",version = "0.1.0"}
revier_render = {path="../revier_render",version = "0.1.0"}
revier_geometry = {path="../revier_geometry",version = "0.1.0"}
revier_object = {path="../revier_object",version = "0.1.0"}
revier_scene = {path="../revier_scene",version = "0.1.0"}
glsl_parser = { path = "../glsl_parser", version = "0.1.0"} 


#Other
ash = {version="0.37.3",features = ["linked", "debug"]}
glam = "0.24.1"

