[package]
name = "revier_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Revier
revier_core = {path="../revier_core",version = "0.1.0"}
revier_data = {path="../revier_data",version = "0.1.0"}

#Other
ash = {version="0.37.3",features = ["linked", "debug"]}
glam = "0.24.1"
